# crunchy-stackport

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: aws_client.py  cache.py  cli.py  config.py  main.py  websocket.py
backend/routes/: common.py  dynamodb.py  ec2.py  endpoints.py  iam.py  lambda_svc.py  logs.py  resources.py  s3.py  secretsmanager.py  sqs.py  stats.py
examples/: docker-compose.yml
tests/: test_cache.py  test_cli.py  test_client.py  test_config.py  test_dynamodb_routes.py  test_ec2_routes.py  test_endpoints.py  test_iam_routes.py  test_lambda_routes.py  test_logs_routes.py  test_registries.py  test_routes.py  test_secretsmanager_routes.py  test_sqs_routes.py  test_websocket.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.test.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/__tests__/: Breadcrumb.test.tsx  Dashboard.test.tsx  ResourceBrowser.test.tsx  api.test.ts  dynamodb-api.test.ts  ec2-api.test.ts  export.test.ts  iam-api.test.ts  lambda-api.test.ts  logs-api.test.ts  service-icons.test.ts  sqs-api.test.ts  useFavorites.test.ts  useFetch.test.ts  useKeyboardShortcuts.test.ts
ui/src/components/: Breadcrumb.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExportDropdown.tsx  JsonViewer.tsx  KeyboardShortcutsModal.tsx  Layout.tsx  ThemeToggle.tsx
ui/src/components/service-views/: DynamoDBBrowser.tsx  (+8 more)
ui/src/hooks/: useFavorites.ts  useFetch.ts  useKeyboardShortcuts.ts  useTheme.ts  useWebSocket.ts
ui/src/lib/: api.ts  aws-icons.tsx  export.ts  service-icons.ts  types.ts  utils.ts
ui/src/pages/: About.tsx  Dashboard.tsx  ResourceBrowser.tsx
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
(+1 files in other folders)
