[project]
name = "stackport"
version = "0.1.0"
description = "Universal AWS emulator browser"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "boto3>=1.35.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project.scripts]
stackport = "backend.main:cli"
