[project]
name = "stackport"
version = "0.1.7"
description = "Universal AWS resource browser for local emulators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Davi Reis Vieira"}]
keywords = ["aws", "ministack", "localstack", "browser", "devtools", "emulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "boto3>=1.35.0"]

[project.urls]
Homepage = "https://github.com/DaviReisVieira/stackport"
Repository = "https://github.com/DaviReisVieira/stackport"
Issues = "https://github.com/DaviReisVieira/stackport/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0", "moto[s3,sqs,lambda,dynamodb,iam]>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["../ui/dist/**/*"]

[project.scripts]
stackport = "backend.main:cli"
